gibbon-compiler/examples/error/test00_error.sexp
#lang s-exp "../../../gibbon/main.rkt"

(ann (error "foo") Int)
